scripts/aks/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "api"
  labels:
    name: "api"
---
apiVersion: v1
kind: Namespace
metadata:
  name: "web"
  labels:
    name: "web"
---
apiVersion: v1
kind: Namespace
metadata:
  name: "ingress"
  labels:
    name: "ingress"
