scripts/aks/namespacesoe.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: web
  labels:
    name: web
---
    kind: Namespace
    apiVersion: v1
    metadata:
      name: api
      labels:
        name: api
